--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>MI PAGINA WEB</h1>
+    <h2>ROPA DE ESTACION</h2>
+    <h2>ROPA VERANO</h2>
+    <h2>ROPA INVIERNO</h2>
 </body>
 </html>
